[package]
name = "featurizer"
version = "0.0.1"
edition = "2021"
description = "Generates input for training the deep-bbq v.2 model"
homepage = "https://bioshell.pl"
license = "Apache-2.0"
keywords = ["bioshell", "deep_bbq"]


[dependencies]
# ---------- BioShell
bioshell-io = { path = "../external/bioshell4/bioshell-io" }
bioshell-seq = { path = "../external/bioshell4/bioshell-seq" }
bioshell-pdb = { path = "../external/bioshell4/bioshell-pdb" }
bioshell-interactions = { path = "../external/bioshell4/bioshell-interactions" }

# ---------- Common
clap = { version = "4.5.20", features = ["derive"] }

# ---------- Logging
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
# ---------- for git md5sum and compilation time
chrono = "0.4"
git2 = "0.19.0"
md5 = "0.7"


[[bin]]
name = "featurizer"
path = "./src/featurizer.rs"

